--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ a:hover {
 
 /* Stylowanie tła */
 body {
-    background-image: url('background.jpg');
+    background-image: url('./imgs/mostNight.png');
     background-size: cover;
     background-attachment: fixed;
+    backdrop-filter: blur(10px);
     font-family: Arial, sans-serif;
     color: white;
 }
@@ -45,34 +46,63 @@ p {
     line-height: 1.6;
 }
 
-img {
-    float: left;
-    margin: 10px;
-    max-width: 300px;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
+
+/* Stylizacja dla każdego mostu */
+.bridge-info {
+    width: 80%;
+}
+
+.bridge-item {
+    display: flex;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+.bridge-item img {
+    width: 50%;
+    margin-right: 20px;
+    margin-left: 50px;
     border: 3px solid #ffa500;
 }
 
-/* Formularz kontaktowy */
-form {
-    background-color: #333;
-    padding: 20px;
-    border-radius: 10px;
+.bridge-item .text {
+    width: 50%;
 }
 
-input, textarea {
+.text {
+    text-align: left;
+}
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
     width: 100%;
     padding: 10px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 input[type="submit"] {
     background-color: #ffa500;
     color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #ff8500;
+    background-color: #ffa500;
 }
