--- a/style.css
+++ b/style.css
@@ -119,3 +119,21 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #e69500;
 }
+
+.test-block{
+    width: 200px;
+    border: 2px solid rgba(71,236,30,1);
+    background: rgba(71, 236, 30, 0.7);
+    text-align: center;
+    color: #000;
+    padding: 20px;
+    cursor: painter;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
